--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
-
-</body>
+	<p> This is a paragraph.</p>
+	<p> This is a second paragraph. </p></body>
 </html>
